   1 Enhancement
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.4 update 1 vs 3.4


  Implemented requests:

  - Progress bar L10N improvement 
  https://sourceforge.net/p/omegat/feature-requests/1055/

  Bug fixes:

  - Panel header title was white under Windows 7 with a classic theme

  Localisation updates:

  - Dutch localisation updated to 3.4 (Documentation, readme)

----------------------------------------------------------------------
 OmegaT 3.4 (2015-04-20)
----------------------------------------------------------------------
  11 Enhancements
   4 Bug fixes
   3 Localisation updates
----------------------------------------------------------------------
3.4 vs 3.1.9 update 1

  Implemented requests:

  - Improve OmegaT look and feel
  https://sourceforge.net/p/omegat/feature-requests/1082/  

  - Better statistics layout for l10n UI 
  https://sourceforge.net/p/omegat/feature-requests/820/

  - Increase the size or better layout of the statistics window
  https://sourceforge.net/p/omegat/feature-requests/656/

  - Add Close button to Statistics window 
  https://sourceforge.net/p/omegat/feature-requests/859/

  - Automatically detect input file encoding when possible 
  https://sourceforge.net/p/omegat/feature-requests/1075/

  - Improve fuzzy match difference granularity in Chinese
  https://sourceforge.net/p/omegat/feature-requests/1077/

  Other changes:

  - New XML Spreadsheet 2003 filter. This allows translating Excel document
exported in XML 2003 format. As the extension is .xml, other filters may
"steal" the file. In that case, they have to be disabled. The XML 
Spreadhsheet 2003 filter limits itself to documents where the first tag
is "Workbook".

  - In Options > File Filters, the filters used by the current project
are displayed in bold

  - New "Trafficlight" theme in the Switch Colour Theme script

  - Options > Tag Validation was renamed to Tag Processing. In that dialog, 